--- a/server/config/config.json
+++ b/server/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": null,
-    "database": "authJune2020",
+    "database": "auth2020",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
